force-app/main/default/objects/Lead__c/fields/Address_as_listed_on_identification3__c.field-meta.xml
<CustomField>
    <fullName>Address_as_listed_on_identification3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address as listed on identification3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>