force-app/main/default/objects/Lead__c/fields/Address_as_listed_on_identification__c.field-meta.xml
<CustomField>
    <fullName>Address_as_listed_on_identification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address as listed on identification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>