force-app/main/default/objects/Lead__c/fields/Agency_of_Issuance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agency_of_Issuance_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency of Issuance Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>