force-app/main/default/objects/Lead__c/fields/Allegiance_to_United_States__c.field-meta.xml
<CustomField>
    <fullName>Allegiance_to_United_States__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Allegiance to United States</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>