force-app/main/default/objects/Lead__c/fields/Anticipated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>