force-app/main/default/objects/Lead__c/fields/Are_you_mailing_attachment_with_report__c.field-meta.xml
<CustomField>
    <fullName>Are_you_mailing_attachment_with_report__c</fullName>
    <label>Are you mailing attachment with report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>