force-app/main/default/objects/Lead__c/fields/Attachment_provided__c.field-meta.xml
<CustomField>
    <fullName>Attachment_provided__c</fullName>
    <label>Attachment provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>