force-app/main/default/objects/Lead__c/fields/Citizenship_Type__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Type__c</fullName>
    <label>Citizenship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUBJECT is a U.S. citizen by birth</fullName>
            </value>
            <value>
                <fullName>SUBJECT is a U.S. citizen by birth, born to U.S. parent(s), in a foreign country</fullName>
            </value>
            <value>
                <fullName>SUBJECT is a naturalized U.S. citizen</fullName>
            </value>
            <value>
                <fullName>SUBJECT is a derived U.S. citizen</fullName>
            </value>
            <value>
                <fullName>SUBJECT is not a U.S. citizen</fullName>
            </value>
            <value>
                <fullName>SUBJECT is a dual citizen of the U.S. and</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>