force-app/main/default/objects/Lead__c/fields/CMO__c.field-meta.xml
<CustomField>
    <fullName>CMO__c</fullName>
    <formula>Case__r.Assigned_To_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMO</label>
    <type>Text</type>
</CustomField>