force-app/main/default/objects/Lead__c/fields/CONCLUDING_QUESTIONS__c.field-meta.xml
<CustomField>
    <fullName>CONCLUDING_QUESTIONS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CONCLUDING QUESTIONS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>