force-app/main/default/objects/Lead__c/fields/Consider_As_Personal__c.field-meta.xml
<CustomField>
    <fullName>Consider_As_Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider As Personal</label>
    <type>Checkbox</type>
</CustomField>