force-app/main/default/objects/Lead__c/fields/Contact_Info_verified_in_EQUIP_Notes3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_verified_in_EQUIP_Notes3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Info verified in EQUIP Notes3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>