force-app/main/default/objects/Lead__c/fields/ContactMethod__c.field-meta.xml
<CustomField>
    <fullName>ContactMethod__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT( Contact_Method__c ))),TEXT(Contact_Method__c),
IF(NOT(ISBLANK(TEXT( Personal_Contact_Method__c ))),TEXT(Personal_Contact_Method__c),
IF(NOT(ISBLANK(TEXT( Employment_Contact_Method__c ))),TEXT(Employment_Contact_Method__c),&apos;&apos; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactMethod</label>
    <type>Text</type>
</CustomField>