force-app/main/default/objects/Lead__c/fields/Days_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Days_Assigned__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Completed_Date__c)),
    Completed_Date__c - Assignee_Date__c,
    TODAY() - Assignee_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>