force-app/main/default/objects/Lead__c/fields/Developed__c.field-meta.xml
<CustomField>
    <fullName>Developed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Developed</label>
    <type>Checkbox</type>
</CustomField>