force-app/main/default/objects/Lead__c/fields/Dual_Citizenship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dual_Citizenship_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dual Citizenship Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>