force-app/main/default/objects/Lead__c/fields/EDUCATION__c.field-meta.xml
<CustomField>
    <fullName>EDUCATION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EDUCATION</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>