force-app/main/default/objects/Lead__c/fields/General_Reference_Association_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Reference_Association_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>General Reference Association Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>