force-app/main/default/objects/Lead__c/fields/General_Template_Record_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Template_Record_Type_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>General Template Record Type Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>