force-app/main/default/objects/Lead__c/fields/GrammarChecked__c.field-meta.xml
<CustomField>
    <fullName>GrammarChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grammar Checked</label>
    <type>Checkbox</type>
</CustomField>