force-app/main/default/objects/Lead__c/fields/Has_Name_DOB_SSN_Recorded_Different4__c.field-meta.xml
<CustomField>
    <fullName>Has_Name_DOB_SSN_Recorded_Different4__c</fullName>
    <label>Has Name DOB SSN Recorded Different4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>