force-app/main/default/objects/Lead__c/fields/Has_Name_DOB_SSN_Recorded_Different_Note__c.field-meta.xml
<CustomField>
    <fullName>Has_Name_DOB_SSN_Recorded_Different_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Has Name DOB SSN Recorded Different Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>