force-app/main/default/objects/Lead__c/fields/Identification_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Document_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identification Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>