force-app/main/default/objects/Lead__c/fields/Identification_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identification Type Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>