force-app/main/default/objects/Lead__c/fields/Information_Release_to_Subject_Notes__c.field-meta.xml
<CustomField>
    <fullName>Information_Release_to_Subject_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Information Release to Subject Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>