force-app/main/default/objects/Lead__c/fields/Interview_conditions__c.field-meta.xml
<CustomField>
    <fullName>Interview_conditions__c</fullName>
    <label>Interview conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oath (Federal Investigator Only)</fullName>
            </value>
            <value>
                <fullName>Unsown</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>