force-app/main/default/objects/Lead__c/fields/Introduction_Credentials_Shown__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Credentials_Shown__c</fullName>
    <label>Introduction/Credentials Shown</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>