force-app/main/default/objects/Lead__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <formula>Lead_Contact_Name__c+&apos;,&apos;+Lead_Contact_Address__c+&apos;,&apos;+Lead_Contact_City__c+&apos;,&apos;+Lead_Contact_State__c+&apos; &apos;+Lead_Contact_Zip__c</formula>
    <label>Lead Contact</label>
    <type>Text</type>
</CustomField>