force-app/main/default/objects/Lead__c/fields/Lead_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Contact Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>