force-app/main/default/objects/Lead__c/fields/Length_of_interview_Hours__c.field-meta.xml
<CustomField>
    <fullName>Length_of_interview_Hours__c</fullName>
    <label>Length of interview Hours</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>