force-app/main/default/objects/Lead__c/fields/LIFESTYLE_HOBBIES_EXTRA_CURRICULAR__c.field-meta.xml
<CustomField>
    <fullName>LIFESTYLE_HOBBIES_EXTRA_CURRICULAR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LIFESTYLE/HOBBIES/EXTRA CURRICULAR</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>