force-app/main/default/objects/Lead__c/fields/MARITAL_STATUS_SPOUSE_FORMER_SPOUSE_S__c.field-meta.xml
<CustomField>
    <fullName>MARITAL_STATUS_SPOUSE_FORMER_SPOUSE_S__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MARITAL STATUS, SPOUSE, FORMER SPOUSE(S)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>