force-app/main/default/objects/Lead__c/fields/MILITARY_FEDERAL_EMPLOYMENT__c.field-meta.xml
<CustomField>
    <fullName>MILITARY_FEDERAL_EMPLOYMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MILITARY/FEDERAL EMPLOYMENT</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>