force-app/main/default/objects/Lead__c/fields/MISUSE_OF_TECHNOLOGY_SYSTEMS__c.field-meta.xml
<CustomField>
    <fullName>MISUSE_OF_TECHNOLOGY_SYSTEMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MISUSE OF TECHNOLOGY SYSTEMS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>