force-app/main/default/objects/Lead__c/fields/Name_as_listed_on_identification2__c.field-meta.xml
<CustomField>
    <fullName>Name_as_listed_on_identification2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name as listed on identification2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>