force-app/main/default/objects/Lead__c/fields/OTHER_NAMES_USED__c.field-meta.xml
<CustomField>
    <fullName>OTHER_NAMES_USED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTHER NAMES USED</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>