force-app/main/default/objects/Lead__c/fields/Raised_Seal__c.field-meta.xml
<CustomField>
    <fullName>Raised_Seal__c</fullName>
    <label>Raised Seal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>