force-app/main/default/objects/Lead__c/fields/Ready_For_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Assignment__c</fullName>
    <formula>IF(Case__r.Investigations_Date__c != Null, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready For Assignment</label>
    <type>Checkbox</type>
</CustomField>