force-app/main/default/objects/Lead__c/fields/Record_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Provider_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>