force-app/main/default/objects/Lead__c/fields/Record_Provider_Title__c.field-meta.xml
<CustomField>
    <fullName>Record_Provider_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Provider Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>