force-app/main/default/objects/Lead__c/fields/Release_Provided__c.field-meta.xml
<CustomField>
    <fullName>Release_Provided__c</fullName>
    <label>Release Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF Release</fullName>
            </value>
            <value>
                <fullName>Specific Release</fullName>
            </value>
            <value>
                <fullName>OFI 16-A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>