force-app/main/default/objects/Lead__c/fields/relinquish_foreign_passport__c.field-meta.xml
<CustomField>
    <fullName>relinquish_foreign_passport__c</fullName>
    <label>relinquish foreign passport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>